# fitbit-web-api

./: .all-contributorsrc  .copier-answers.yml  .openapi-generator-ignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  ruff.toml  setup.py  test-requirements.txt
.devcontainer/: Dockerfile
.github/: dependabot.yml
.github/workflows/: ci.yml  labels.yml  poetry-upgrade.yml
.openapi-generator/: FILES
docs/: ActiveZoneMinutesIntradayTimeSeriesApi.md  ActiveZoneMinutesTimeSeriesApi.md  ActivityApi.md  ActivityIntradayTimeSeriesApi.md  ActivityTimeSeriesApi.md  AuthorizationApi.md  Badge.md  BodyApi.md  BodyTimeSeriesApi.md  BreathingRateApi.md  BreathingRateIntradayApi.md  CardioFitnessScoreVO2MaxApi.md  CreateSleepGoalResponse.md  CreateSleepLogResponse.md  DefaultApi.md  DevicesApi.md  ElectrocardiogramApi.md  FoodItem.md  FriendsApi.md  GetBadgesResponse.md  GetProfileResponse.md  GetSleepGoalResponse.md  GetSleepLogByDateRangeResponse.md  GetSleepLogByDateResponse.md  GetSleepLogListResponse.md  GetSleepLogListResponsePagination.md  HeartRateIntradayTimeSeriesApi.md  HeartRateTimeSeriesApi.md  HeartRateVariabilityApi.md  HeartRateVariabilityIntradayApi.md  IrregularRhythmNotificationsApi.md  Meal.md  NutritionApi.md  NutritionTimeSeriesApi.md  Oauth2IntrospectBody.md  Oauth2RevokeBody.md  ProfileJsonBody.md  SleepApi.md  SleepGoal.md  SleepLog.md  (+12 more)
fitbit_web_api/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
fitbit_web_api/api/: __init__.py  active_zone_minutes_intraday_time_series_api.py  active_zone_minutes_time_series_api.py  activity_api.py  activity_intraday_time_series_api.py  activity_time_series_api.py  authorization_api.py  body_api.py  body_time_series_api.py  breathing_rate_api.py  breathing_rate_intraday_api.py  cardio_fitness_score__vo2_max_api.py  cardio_fitness_score_vo2_max_api.py  default_api.py  devices_api.py  electrocardiogram_api.py  friends_api.py  heart_rate_intraday_time_series_api.py  heart_rate_time_series_api.py  heart_rate_variability_api.py  heart_rate_variability_intraday_api.py  irregular_rhythm_notifications_api.py  nutrition_api.py  nutrition_time_series_api.py  sleep_api.py  sp_o2_api.py  sp_o2_intraday_api.py  subscriptions_api.py  temperature_api.py  user_api.py
fitbit_web_api/models/: __init__.py  badge.py  create_sleep_goal_response.py  create_sleep_log_response.py  food_item.py  get_badges_response.py  get_profile_response.py  get_sleep_goal_response.py  get_sleep_log_by_date_range_response.py  get_sleep_log_by_date_response.py  get_sleep_log_list_response.py  get_sleep_log_list_response_pagination.py  meal.py  oauth2_introspect_body.py  oauth2_revoke_body.py  profile_json_body.py  sleep_goal.py  sleep_log.py  sleep_log_levels.py  sleep_log_levels_data_inner.py  sleep_log_levels_summary_value.py  sleep_meta.py  sleep_summary.py  user.py  user_features.py
openapi/: fitbit-web-api-openapi-fixed.json  fitbit-web-api-openapi.json  fitbit-web-api-swagger.json  openapi-config.yaml
openapi/model/sleep/: get_sleep_goal_response.json  get_sleep_log_by_date_range_response.json  get_sleep_log_by_date_response.json  get_sleep_log_list_response.json  sleep_goal.json  sleep_log.json  sleep_meta.json  sleep_summary.json
openapi/model/user/: badge.json  get_badges_response.json  get_profile_response.json  user.json
openapi/paths/: sleep_paths.json  user_paths.json
script/: README.md  generate-client.sh  generate-schema.sh  upgrade-schema.py
swagger-tools/: swagger-download.sh  swagger-generate-api.sh
swagger_client/: __init__.py  api_client.py  configuration.py  rest.py
swagger_client/api/: __init__.py  active_zone_minutes_intraday_time_series_api.py  active_zone_minutes_time_series_api.py  activity_api.py  activity_intraday_time_series_api.py  activity_time_series_api.py  authorization_api.py  body_api.py  body_time_series_api.py  breathing_rate_api.py  breathing_rate_intraday_api.py  cardio_fitness_score__vo2_max_api.py  devices_api.py  electrocardiogram_api.py  friends_api.py  heart_rate_intraday_time_series_api.py  heart_rate_time_series_api.py  heart_rate_variability_api.py  heart_rate_variability_intraday_api.py  nutrition_api.py  nutrition_time_series_api.py  sleep_api.py  sp_o2_api.py  sp_o2_intraday_api.py  subscriptions_api.py  temperature_api.py  user_api.py
swagger_client/models/: __init__.py  food_item.py  meal.py  oauth2_introspect_body.py  oauth2_revoke_body.py  profile_json_body.py
templates/: CHANGELOG.md.j2
test/: test_active_zone_minutes_intraday_time_series_api.py  test_active_zone_minutes_time_series_api.py  test_activity_api.py  test_activity_intraday_time_series_api.py  test_activity_time_series_api.py  test_authorization_api.py  test_badge.py  test_body_api.py  test_body_time_series_api.py  test_breathing_rate_api.py  test_breathing_rate_intraday_api.py  test_cardio_fitness_score__vo2_max_api.py  test_cardio_fitness_score_vo2_max_api.py  test_create_sleep_goal_response.py  test_create_sleep_log_response.py  test_default_api.py  test_devices_api.py  test_electrocardiogram_api.py  test_food_item.py  test_friends_api.py  test_get_badges_response.py  test_get_profile_response.py  test_get_sleep_goal_response.py  test_get_sleep_log_by_date_range_response.py  test_get_sleep_log_by_date_response.py  test_get_sleep_log_list_response.py  test_get_sleep_log_list_response_pagination.py  test_heart_rate_intraday_time_series_api.py  test_heart_rate_time_series_api.py  test_heart_rate_variability_api.py  test_heart_rate_variability_intraday_api.py  test_irregular_rhythm_notifications_api.py  test_meal.py  test_nutrition_api.py  test_nutrition_time_series_api.py  test_oauth2_introspect_body.py  test_oauth2_revoke_body.py  test_profile_json_body.py  test_sleep_api.py  test_sleep_goal.py  (+13 more)
tests/: test_main.py
