[project]
name = "fitbit-web-api"
version = "2.0.1"
requires-python = ">=3.12"
description = "Fitbit Web API"
authors = [
{ name = "Simone Chemelli", email = "simone.chemelli@gmail.com" },
]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/chemelli74/fitbit-web-api"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
packages = [
    { include = "fitbit_web_api" },
]
dependencies = [
"aiohttp (==3.9.5)",
"aiohttp-retry (>=2.9.1,<3.0.0)",
"pydantic (>=2)",
"python-dateutil (>=2.8.2,<3.0.0)",
"six (>=1.16.0,<2.0.0)",
"typing-extensions (>=4.7.1)",
"urllib3 (>=2.1.0,<3.0.0)"
]

[project.urls]
"Homepage" = "https://github.com/chemelli74/fitbit-web-api"
"Bug Tracker" = "https://github.com/chemelli74/fitbit-web-api/issues"
"Changelog" = "https://github.com/chemelli74/fitbit-web-api/blob/main/CHANGELOG.md"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4"
pytest-cov = ">=5,<8"
types-python-dateutil = ">= 2.8.19.14"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = [
    "fitbit_web_api/__init__.py:__version__",
]
build_command = "pip install poetry && poetry build"

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    "chore*",
    "ci*",
]

[tool.semantic_release.changelog.environment]
keep_trailing_newline = true

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.branches.noop]
match = "(?!main$)"
prerelease = true

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=fitbit_web_api --cov-report=term-missing:skip-covered"
pythonpath = ["."]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
    'if __name__ == "__main__":',
]

[tool.ruff.isort]
known-first-party = ["fitbit_web_api", "tests"]

[tool.mypy]
check_untyped_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "./"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
    'setup.py',
]

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
